nextlab_artefacts/yamls_after_updates/demoapp-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.network/demonet: 'true'
    io.kompose.service: demoapp
  name: demoapp
spec:
  containers:
  - env:
    - name: DB_PASSWORD
      value: demo_pass123
    - name: DB_URL
      value: jdbc:postgresql://demo-postgres.cj06qao0c6x0.us-east-1.rds.amazonaws.com:5432/postgres
    - name: DB_USERNAME
      value: demo_admin
    image: 825765412441.dkr.ecr.us-east-1.amazonaws.com/demoapp:latest
    name: demoapp
    ports:
    - containerPort: 9080
    resources:
      limits:
        cpu: '250m'
        memory: '248Mi'
    securityContext:
      runAsUser: 1000
    volumeMounts:
    - mountPath: /opt/nextlabs/demoapp/logs
      name: demoapp-claim0
  restartPolicy: OnFailure
  volumes:
  - name: demoapp-claim0
    persistentVolumeClaim:
      claimName: demoapp-claim0
status: {}
