nextlab_artefacts/yamls_after_updates/pgdb-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.network/demonet: 'true'
    io.kompose.service: pgdb
  name: pgdb
spec:
  containers:
  - env:
    - name: POSTGRES_PASSWORD
      value: demo_pass123
    - name: POSTGRES_USER
      value: demo_admin
    - name: PGDATA
      value: /var/lib/postgresql/data/pgdata
    image: 825765412441.dkr.ecr.us-east-1.amazonaws.com/postgres:latest
    name: pgdb
    ports:
    - containerPort: 5432
    resources:
      limits:
        cpu: '250m'
        memory: '248Mi'
    volumeMounts:
    - mountPath: /var/lib/postgresql/data
      name: db
  restartPolicy: Never
  volumes:
  - name: db
    persistentVolumeClaim:
      claimName: db
status: {}
