nextlab_artefacts/yamls_after_updates/demoapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: demoapp
  name: demoapp
spec:
  type: NodePort
  ports:
    - name: "80"
      port: 80
      targetPort: 9080
      nodePort: 30080
  selector:
    io.kompose.service: demoapp
status:
  loadBalancer: {}
