nextlab_artefacts/yamls_after_updates/pgadmin4-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: pgadmin4
  name: pgadmin4
spec:
  type: NodePort
  ports:
    - name: "8080"
      port: 8080
      targetPort: 80
      nodePort: 30082
  selector:
    io.kompose.service: pgadmin4
status:
  loadBalancer: {}
