nextlab_artefacts/yamls_after_updates/pgdb-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: pgdb
  name: pgdb
spec:
  type: NodePort
  ports:
    - name: "5432"
      port: 5432
      targetPort: 5432
      nodePort: 30081
  selector:
    io.kompose.service: pgdb
status:
  loadBalancer: {}
