nextlab_artefacts/yamls_after_updates/demonet-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: demonet
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/demonet: "true"
  podSelector:
    matchLabels:
      io.kompose.network/demonet: "true"
